--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visit Time Tracker</title>
+    <title>EasyEasy Ai Tools</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
     <style>
         * {
@@ -194,8 +194,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>📊 Visit Tracker</h1>
-        <p class="subtitle">Your personal visit history</p>
+        <h1>📊 EasyEasy Ai Tools</h1>
+        <p class="subtitle">Your Personal Smoking Reduction History</p>
         
         <div class="welcome-message" id="welcomeMessage"></div>
         
