--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 <body>
     <div class="container">
         <h1>📊 EasyEasy Ai Tools</h1>
-        <p class="subtitle">Your Personal Smoking Reduction History</p>
+        <p class="subtitle">Your Personal Smoking Reduction Helper</p>
         
         <div class="welcome-message" id="welcomeMessage"></div>
         
