--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visit Time Tracker</title>
+    <title>EasyEasy AI Helper</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
     <style>
         * {
@@ -318,7 +318,7 @@
     <!-- Main Dashboard Page -->
     <div id="mainPage" class="page active">
         <div class="container">
-            <h1>📊 Visit Tracker</h1>
+            <h1>📊 EasyEasy AI Helper</h1>
             <p class="subtitle">Your personal visit history</p>
             
             <div class="welcome-message" id="welcomeMessage">Loading...</div>
